objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Case record type</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Bug fix submitted</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not resolved</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Reopen</fullName>
        </values>
        <values>
            <fullName>Time</fullName>
        </values>
        <values>
            <fullName>Waiting on customer</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_record_type__c</fullName>
        <formula>Account.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account record type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <description>Choose the browser you are currently using.</description>
        <inlineHelpText>Choose the browser you are currently using.</inlineHelpText>
        <label>Browser</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Operating_System__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Internet Explorer</fullName>
                </value>
                <value>
                    <fullName>Safari</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>Firefox</fullName>
                </value>
                <value>
                    <fullName>Chrome</fullName>
                </value>
                <value>
                    <fullName>Mozilla</fullName>
                </value>
                <value>
                    <fullName>Netscape</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_hours__c</fullName>
        <formula>ROUND(8*(
(7*FLOOR(( DATEVALUE(Job_Finish_Date_Time__c) -DATE(1996,01,01))/7) +
MIN(5, 
    MOD(DATEVALUE(Job_Finish_Date_Time__c)-DATE(1996,01,01), 7) +
    MIN(1, 24/8*(MOD(Job_Finish_Date_Time__c-DATETIMEVALUE(&apos;1996-01-01 09:30:00&apos;), 1)))
))
-
(7*FLOOR((DATEVALUE( Incident_Date_Time__c )-DATE(1996,01,01))/7) +
MIN(5, 
    MOD(DATEVALUE(Incident_Date_Time__c)-DATE(1996,01,01), 7) +
    MIN(1, 24/8*(MOD(Incident_Date_Time__c-DATETIMEVALUE(&apos;1996-01-01 09:30:00&apos;), 1)))
))
), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_time_field__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date time field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entitlement_Custom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entitlement Custom</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident_Date_Time__c</fullName>
        <label>Incident Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Finish_Date_Time__c</fullName>
        <label>Job Finish Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Incident_BH__c</fullName>
        <formula>((Job_Finish_Date_Time__c  -  Incident_Date_Time__c ) *24) -  Business_hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Incident BH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NOW_1h__c</fullName>
        <formula>NOW()-0.04167</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOW-1h</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NOW__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOW</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Hold_Time__c</fullName>
        <label>On Hold Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Hold__c</fullName>
        <formula>11040000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On Hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <description>Choose the operating system you are currently using.</description>
        <inlineHelpText>Choose the operating system you are currently using.</inlineHelpText>
        <label>Operating System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Macintosh</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Opportunity.IsClosed</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMA_Number__c</fullName>
        <label>RMA Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIST_SIST__c</fullName>
        <formula>(Service_Impact_Stop_Time__c - Service_Impact_Start_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIST - SIST</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Impact_Start_Time__c</fullName>
        <label>Service Impact Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Impact_Stop_Time__c</fullName>
        <label>Service Impact Stop Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Unavailable_Formatted_SF_support__c</fullName>
        <formula>TEXT(FLOOR(Service_Unavailable_for_SF_support__c/(1000*60*60)) )&amp;&quot; h &quot;&amp; 
TEXT(floor(mod(mod(Service_Unavailable_for_SF_support__c,1000*60*60*24),1000*60*60)/(1000*60))) &amp; &quot; min&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Unavailable Formatted SF support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Unavailable_for_SF_support__c</fullName>
        <formula>IF(ISNULL( Service_Impact_Stop_Time__c ), 
IF(ISNULL(Service_Impact_Start_Time__c),0,(NOW() - Service_Impact_Start_Time__c) * 1000*60*60*24 - On_Hold__c), 
(ROUND(Service_Impact_Stop_Time__c - Service_Impact_Start_Time__c,2)) * 1000*60*60*24 - On_Hold__c
)

/*(Service_Impact_Stop_Time__c - Service_Impact_Start_Time__c)*/
/*0.17*/
/*0.1694444444*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Unavailable for SF support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <defaultValue>&quot;Kind regards Arturo Rodriguez Salesforce.com&quot;</defaultValue>
        <label>Signature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_sefl_service__c</fullName>
        <formula>CASE(Status,
&quot;New&quot;, &quot;Nuevo&quot;, 
TEXT(Status))</formula>
        <label>Status sefl service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <formula>TEXT( Account.Support_Level__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_and_Maintenance_Expiration__c</fullName>
        <formula>Account.Support_and_Maintenance_Expiration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support and Maintenance Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_owner__c</fullName>
        <label>Time current owner selected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_recorded__c</fullName>
        <label>Time previous owner had the case</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <formula>$User.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_date__c</fullName>
        <formula>IF(ISBLANK( AccountId ),&quot;&quot;,TEXT(Account.CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>account date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_id__c</fullName>
        <formula>if(ISBLANK( AccountId ) , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>account id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amount__c</fullName>
        <label>amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bla_bla_email__c</fullName>
        <label>bla bla email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>case_origin_custom__c</fullName>
        <label>case origin custom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>create_date_case__c</fullName>
        <formula>IF(ISNULL( CreatedDate ), &quot;&quot;, 
Text(CASE(VALUE(MID(TEXT( CreatedDate ) , 12, 2)) ,
 0, 1,
 1, 2,
 2, 3,
3, 4,
4, 5,
5, 6,
6, 7,
7, 8,
8, 9,
9, 10,
10, 11,
11, 12,
12, 1,
13, 2,
14,3,
15, 4,
16, 5,
17, 6,
18, 7,
19, 8,
20, 9,
21, 10,
22, 11,
23, 12,
 24))

&amp; &quot;:&quot; 
&amp; MID(TEXT( CreatedDate ) , 15, 2) 
&amp; IF(AND(VALUE(MID(TEXT( CreatedDate ) , 12, 2)) &gt;= 0, VALUE(MID(TEXT( CreatedDate ) , 12, 2)) &lt;= 10), &quot; AM&quot;, &quot; PM&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>create date case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>handled_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>handled by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>multi_Javier2__c</fullName>
        <label>multi Javier2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>otro1</fullName>
                </value>
                <value>
                    <fullName>otro2</fullName>
                </value>
                <value>
                    <fullName>otro3</fullName>
                </value>
                <value>
                    <fullName>otro4</fullName>
                </value>
                <value>
                    <fullName>otro5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>multi_Javier__c</fullName>
        <label>multi Javier</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Valor1</fullName>
                </value>
                <value>
                    <fullName>Valor2</fullName>
                </value>
                <value>
                    <fullName>Valor3</fullName>
                </value>
                <value>
                    <fullName>Valor4</fullName>
                </value>
                <value>
                    <fullName>Valor5</fullName>
                </value>
                <value>
                    <fullName>Valor6</fullName>
                    <default>true</default>
                    <label>Valor6</label>
                </value>
                <value>
                    <fullName>Valor7</fullName>
                </value>
                <value>
                    <fullName>Valor8</fullName>
                </value>
                <value>
                    <fullName>Valor9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>now_SIST__c</fullName>
        <formula>(NOW() - Service_Impact_Start_Time__c) * 1000*60*60*24 - On_Hold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>now - SIST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test_user_id__c</fullName>
        <label>test user id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>testcustom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>testcustom1</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Origin</field>
                <operation>equals</operation>
                <valueField>testcustom1__c.status__c</valueField>
            </filterItems>
            <filterItems>
                <field>testcustom1__c.status__c</field>
                <operation>equals</operation>
                <value>Investigating</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>testcustom1__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>text_5000__c</fullName>
        <label>text 5000</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_customer_portal_users</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All customer portal users</label>
        <language>en_US</language>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Case_queue_2_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Case queue 2</label>
        <queue>Case_queue_2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA</fullName>
        <filterScope>Queue</filterScope>
        <label>EMEA</label>
        <language>en_US</language>
        <queue>EMEA</queue>
    </listViews>
    <listViews>
        <fullName>General_ticket_queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>General ticket queue</label>
        <language>en_US</language>
        <queue>General_ticket_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>W2C_Case</fullName>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>W2C</label>
        <queue>W2C</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>all_partner_users</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>all partner users</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Case_Type2</fullName>
        <active>true</active>
        <businessProcess>Case record type</businessProcess>
        <label>Case Type2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case_type</fullName>
        <active>true</active>
        <businessProcess>Case record type</businessProcess>
        <label>Case type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Feedbase_layout_RT</fullName>
        <active>true</active>
        <businessProcess>Case record type</businessProcess>
        <label>Feed base layout RT</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>No_change_status_when_closed</fullName>
        <active>false</active>
        <errorConditionFormula>AND ( ISPICKVAL( Status ,&quot;New&quot;), $User.ProfileId  &lt;&gt; &quot;00eD00000016AOH&quot; )</errorConditionFormula>
        <errorMessage>no puedes editar este caso</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_account_field</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Account.Account_type__c ,&quot;1&quot;)</errorConditionFormula>
        <errorMessage>Account type must be different from 1 in the account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>permission_set_test</fullName>
        <active>false</active>
        <errorConditionFormula>$Permission.Permission_set_access</errorConditionFormula>
        <errorMessage>this user has permission set audit field which is in a validation rule. Check the validation rule</errorMessage>
    </validationRules>
</CustomObject>